Frequent switching between normal video and pip resulted in the video image no longer appearing in the pip window, although the audio would play.
Categories
(Toolkit :: Picture-in-Picture, defect, P3)
Tracking
()
People
(Reporter: alice0775, Assigned: sotaro)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(2 files)
35.05 KB,
text/plain
|
Details | |
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Steps to reproduce:
- Open youtube video and playback
e.g. http://www.youtube.com/watch?v=BH0BNbwqNK8 - Click pip toggle button in location bar
Ctrl+Shift+]
- Repeat Step 2 about 10 times at approximately 0.5-1.0 second intervals.
Actual results:
Pip window becomes black, no video image. But audio is playing.
When this occurs, video image stops in the browser after turning off the pip window
Profiler log: https://share.firefox.dev/3XQE0fi
Expected results:
Video images should also play normally in pip or main browser
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5886d166601b6c778a05c9f7028d4bdafd7b829c&tochange=d52c1ab80f0123ce77837924151f04efcab45623
Reporter | ||
Comment 1•2 months ago
|
||
Reporter | ||
Updated•2 months ago
|
Comment 2•2 months ago
|
||
Set release status flags based on info from the regressing bug 1899450
:sotaro, since you are the author of the regressor, bug 1899450, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Reporter | ||
Updated•2 months ago
|
Assignee | ||
Comment 3•2 months ago
|
||
I take a look.
Updated•2 months ago
|
Assignee | ||
Comment 4•2 months ago
|
||
It seemed that the problem seemed to happen with any GPU that enables zero copy video with hardware video decoding. And the problem was addressed by pause and resume the video.
Assignee | ||
Comment 5•2 months ago
|
||
On AMD GPUs, Bug 1899450 caused the regression. For Intel GPUs and NVIDIA GPUs, the problem already existed.
Assignee | ||
Comment 6•2 months ago
|
||
It seems necessary to clear all images of secondary ImageContainer, when it is removed from VideoSink.
Assignee | ||
Comment 7•2 months ago
|
||
Comment 9•2 months ago
|
||
Set release status flags based on info from the regressing bug 1899450
Comment 10•2 months ago
|
||
bugherder |
Comment 11•2 months ago
|
||
The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox132
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 12•2 months ago
|
||
Alice0775 White, can you check if the problem is addressed with latest nightly?
Reporter | ||
Comment 13•2 months ago
|
||
I managed to reproduce the issue on Nightly133.0a1(20240930215150) Windows11.
And I verified the fix on latest Nightly133.0a1(20241003094710) Windows11.
Assignee | ||
Comment 15•2 months ago
|
||
Comment on attachment 9427671 [details]
Bug 1920061 - Clear all images of secondary ImageContainer, when it is removed from VideoSink
Beta/Release Uplift Approval Request
- User impact if declined: zero video frame happen with the STR of Bug 1920061 comment 0 when zero video frame copy is enabled.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change just clear posted video frames from obsolete pip VideoSink.
- String changes made/needed:
- Is Android affected?: Yes
Comment 16•2 months ago
|
||
Comment on attachment 9427671 [details]
Bug 1920061 - Clear all images of secondary ImageContainer, when it is removed from VideoSink
Approved for 132.0b4.
Updated•2 months ago
|
Comment 17•2 months ago
|
||
uplift |
Updated•2 months ago
|
Updated•2 months ago
|
Comment 18•2 months ago
|
||
Reproduced this issue on an affected nightly from 2024-09-20, on Win 10.
Verified as fixed on Firefox 132.0b4 (20241007091632) using Win 10 and Win 11.
Description
•