Bug 1920061 - Clear all images of secondary ImageContainer, when it is removed from VideoSink r=media-playback-reviewers,karlt a=RyanVM

When the problem happened, decoded video frames were retained in the secondary ImageContainer. Therefore, video frames were not recycled by hardware video decoder.

When removing the secondary ImageContainer from VideoSink, clearing all images in the secondary ImageContainer could work around the problem.

Differential Revision: https://phabricator.services.mozilla.com/D223907